--- a/sound/soc/rk29/Makefile
+++ b/sound/soc/rk29/Makefile
@@ -1,25 +1,29 @@
-# ROCKCHIP Platform Support
-snd-soc-rk29-rockchip-objs := rk29_pcm.o
-ifdef CONFIG_ARCH_RK29
-snd-soc-rk29-rockchip-i2s-objs := rk29_i2s.o
-else
-snd-soc-rk29-rockchip-i2s-objs := rk30_i2s.o
-endif
-snd-soc-rk29-rockchip-spdif-objs := rk_spdif.o
 
-obj-$(CONFIG_SND_RK29_SOC) += snd-soc-rk29-rockchip.o
-obj-$(CONFIG_SND_RK29_SOC_I2S) += snd-soc-rk29-rockchip-i2s.o
-obj-$(CONFIG_SND_RK_SOC_SPDIF) += snd-soc-rk29-rockchip-spdif.o
+# ROCKCHIP Platform Support
+snd-soc-rockchip-objs := rk29_pcm.o
+ifdef CONFIG_ARCH_RK29
+snd-soc-rockchip-i2s-objs := rk29_i2s.o
+else
+snd-soc-rockchip-i2s-objs := rk30_i2s.o
+endif
+snd-soc-rockchip-spdif-objs := rk_spdif.o
+
+obj-$(CONFIG_SND_RK29_SOC) += snd-soc-rockchip.o
+obj-$(CONFIG_SND_RK29_SOC_I2S) += snd-soc-rockchip-i2s.o
+obj-$(CONFIG_SND_RK_SOC_SPDIF) += snd-soc-rockchip-spdif.o
 
 # ROCKCHIP Machine Support
 snd-soc-rk29-wm8900-objs := rk29_wm8900.o
 snd-soc-rk29-rt5621-objs := rk29_rt5621.o
 snd-soc-rk29-rt5631-objs := rk29_rt5631.o
+snd-soc-rk29-ak4396-objs := rk29_ak4396.o
 snd-soc-rk29-rt5616-objs := rk29_rt5616.o
 snd-soc-rk29-rt5631-phone-objs := rk29_rt5631_phone.o
 snd-soc-rk29-rt5625-objs := rk29_rt5625.o
+snd-soc-rk29-rt5640-objs := rk29_rt5640.o
 snd-soc-rk29-rt3261-objs := rk29_rt3261.o
 snd-soc-rk29-rt3224-objs := rk29_rt3261.o
+snd-soc-rk29-rt5639-objs := rk29_rt5639.o
 snd-soc-rk29-cs42l52-objs := rk29_cs42l52.o
 snd-soc-rk29-aic3111-objs := rk29_aic3111.o
 snd-soc-rk29-wm8988-objs := rk29_wm8988.o
@@ -29,20 +33,26 @@ snd-soc-rk29-rk610-objs := rk29_jetta_codec.o
 snd-soc-rk29-rk616-objs := rk_rk616.o
 snd-soc-rk29-aic3262-objs := rk29_aic3262.o
 snd-soc-rk29-rk2928-objs := rk2928-card.o
-snd-soc-rk29-rk3026-objs := rk_rk3026.o
 snd-soc-rk29-es8323-objs := rk29_es8323.o
+snd-soc-rk29-rk3026-objs := rk_rk3026.o
+snd-soc-rk29-rk3190-objs := rk_rk3190.o
 snd-soc-rk29-hdmi-i2s-objs := rk_hdmi_i2s.o
 snd-soc-rk29-hdmi-spdif-objs := rk_hdmi_spdif.o
+snd-soc-rk29-rt5512-objs := rk29_rt5512.o
+snd-soc-rk29-cx2070x-objs := rk29_cx2070x.o
 
 obj-$(CONFIG_SND_RK29_SOC_WM8994) += snd-soc-rk29-wm8994.o
 obj-$(CONFIG_SND_RK29_SOC_WM8988) += snd-soc-rk29-wm8988.o
 obj-$(CONFIG_SND_RK29_SOC_WM8900) += snd-soc-rk29-wm8900.o
 obj-$(CONFIG_SND_RK29_SOC_RT5621) += snd-soc-rk29-rt5621.o
 obj-$(CONFIG_SND_RK29_SOC_RT5631) += snd-soc-rk29-rt5631.o
+obj-$(CONFIG_SND_RK29_SOC_AK4396) += snd-soc-rk29-ak4396.o
 obj-$(CONFIG_SND_RK29_SOC_RT5631_PHONE) += snd-soc-rk29-rt5631-phone.o
 obj-$(CONFIG_SND_RK29_SOC_RT5625) += snd-soc-rk29-rt5625.o
+obj-$(CONFIG_SND_RK29_SOC_RT5640) += snd-soc-rk29-rt5640.o
 obj-$(CONFIG_SND_RK29_SOC_RT3261) += snd-soc-rk29-rt3261.o
 obj-$(CONFIG_SND_RK29_SOC_RT3224) += snd-soc-rk29-rt3224.o
+obj-$(CONFIG_SND_RK29_SOC_RT5639) += snd-soc-rk29-rt5639.o
 obj-$(CONFIG_SND_RK29_SOC_RT5616) += snd-soc-rk29-rt5616.o
 obj-$(CONFIG_SND_RK29_SOC_RK1000) += snd-soc-rk29-rk1000.o
 obj-$(CONFIG_SND_RK29_SOC_CS42L52) += snd-soc-rk29-cs42l52.o
@@ -52,6 +62,11 @@ obj-$(CONFIG_SND_RK29_SOC_RK610) += snd-soc-rk29-rk610.o
 obj-$(CONFIG_SND_RK_SOC_RK616) += snd-soc-rk29-rk616.o
 obj-$(CONFIG_SND_RK_SOC_HDMI_I2S) += snd-soc-rk29-hdmi-i2s.o
 obj-$(CONFIG_SND_RK_SOC_HDMI_SPDIF) += snd-soc-rk29-hdmi-spdif.o
+obj-$(CONFIG_SND_RK_SOC_SPDIF_CARD) += snd-soc-rk29-hdmi-spdif.o
+
 obj-$(CONFIG_SND_RK_SOC_RK2928) += snd-soc-rk29-rk2928.o
-obj-$(CONFIG_SND_RK_SOC_RK3026) += snd-soc-rk29-rk3026.o
 obj-$(CONFIG_SND_RK29_SOC_ES8323) += snd-soc-rk29-es8323.o
+obj-$(CONFIG_SND_RK_SOC_RK3190) += snd-soc-rk29-rk3190.o
+obj-$(CONFIG_SND_RK_SOC_RK3026) += snd-soc-rk29-rk3026.o
+obj-$(CONFIG_SND_RK29_SOC_RT5512) += snd-soc-rk29-rt5512.o
+obj-$(CONFIG_SND_RK29_SOC_CX2070X) += snd-soc-rk29-cx2070x.o
