OrangePI: Compile gen_check_code from sources for brom

--- a/arch/arm/mach-sunxi/power/brom/Makefile
+++ b/arch/arm/mach-sunxi/power/brom/Makefile
@@ -5,7 +5,8 @@ targets := resumes.elf
 
 #use "-Os" flags.
 #Don't use "-O2" flags.
-KBUILD_CFLAGS := -g -c -nostdlib -march=armv7-a -marm -fno-unwind-tables -fno-asynchronous-unwind-tables -mlittle-endian -O2 --min_array_alignment=4 --no_unaligned_access
+KBUILD_CFLAGS := -g -c -nostdlib -march=armv7-a -marm -fno-unwind-tables -fno-asynchronous-unwind-tables -mlittle-endian -O2
+# --min_array_alignment=4 --no_unaligned_access
 
 #Include the cur dir.
 KBUILD_CPPFLAGS += -I.
@@ -22,8 +23,11 @@ resumes-y :=   resumes.o        \
 
 resumes-y := $(addprefix $(obj)/,$(resumes-y))
 
-$(obj)/resumes.code: $(obj)/resumes.bin
-	$(Q)$(obj)/gen_check_code $(obj)/resumes.bin $(obj)/resumes.code
+$(obj)/resumes.code: $(obj)/resumes.bin $(obj)/../../pm/standby/gen_check_code
+	$(Q)$(obj)/../../pm/standby/gen_check_code $(obj)/resumes.bin $(obj)/resumes.code
+
+$(obj)/../../pm/standby/gen_check_code: $(obj)/../../pm/standby/gen_check_code.c
+	$(Q)gcc	-o $@ $^
 
 $(obj)/resumes.bin: $(obj)/resumes.elf FORCE
 	$(Q)$(CROSS_COMPILE)objcopy -O binary $(obj)/resumes.elf $(obj)/resumes.bin
